The viewport artifacts associated with the use of normal maps. #46305

Closed
opened 2015-09-28 17:47:45 +02:00 by Alexander Romanov · 16 comments

System Information
Ubuntu 14.04.3 LTS

Blender Version
Broken: 2.76 rc2
Worked: 2.75a

Short description of error

  1. Open the attached file
  2. Press Tab to switch into edit mode and backwards several times. See shading artifacts during switching.
  3. In the Geometry node remove UV_01 uvmap. The artifacts will disappear.
  4. In the Texture tab uncheck "beer_column_norm" texture. The artifacts will be removed with the normal map.

Quite a lot of blend4web samples have these unwelcome artifacts in 2.76rc2. So this is very important for us that this bug will be fixed.
uv_bug.blend

**System Information** Ubuntu 14.04.3 LTS **Blender Version** Broken: 2.76 rc2 Worked: 2.75a **Short description of error** 1) Open the attached file 2) Press Tab to switch into edit mode and backwards several times. See shading artifacts during switching. 3) In the Geometry node remove UV_01 uvmap. The artifacts will disappear. 4) In the Texture tab uncheck "beer_column_norm" texture. The artifacts will be removed with the normal map. Quite a lot of blend4web samples have these unwelcome artifacts in 2.76rc2. So this is very important for us that this bug will be fixed. [uv_bug.blend](https://archive.blender.org/developer/F240536/uv_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @AlexanderRomanov

Added subscriber: @AlexanderRomanov

Added subscriber: @mont29

Added subscriber: @mont29

Cannot reproduce any artifact here with latest master (debian64 testing, nvidia 850m, 340 drivers).

Please state your precise GPU & driver versions, and you can also try to start in software OpenGL mode (use the blender-softwaregl distributed with official blender, will be slow, but will show whether this is a driver issue or not).

Cannot reproduce any artifact here with latest master (debian64 testing, nvidia 850m, 340 drivers). Please state your precise GPU & driver versions, and you can also try to start in software OpenGL mode (use the `blender-softwaregl` distributed with official blender, will be slow, but will show whether this is a driver issue or not).
Author
Member

GeForce GTX 780
NVIDIA driver version: 352.30

blender-softwaregl crashes:
/tmp/blender.crash.txt:

Blender 2.76 (sub 0), Commit date: 2015-09-23 14:02, Hash e24ea81

backtrace

./blender(BLI_system_backtrace+0x1d) [0x1a3d97d]
./blender() [0x10563b4]
./blender() [0x1056591]

GeForce GTX 780 NVIDIA driver version: 352.30 blender-softwaregl crashes: /tmp/blender.crash.txt: # Blender 2.76 (sub 0), Commit date: 2015-09-23 14:02, Hash e24ea81 # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1a3d97d] ./blender() [0x10563b4] ./blender() [0x1056591]

Can you make a screenshot of those artifacts, please?

Can you make a screenshot of those artifacts, please?
Author
Member

With the help of "git bisect" I found that 2ec00ea0c1 is the reason.
And in this commit I see the crash.
Artifact:
Screenshot from 2015-09-29 10:36:39.png

With the help of "git bisect" I found that 2ec00ea0c1be1ace7cd0c7b68e43cc8e87dd07c7 is the reason. And in this commit I see the crash. Artifact: ![Screenshot from 2015-09-29 10:36:39.png](https://archive.blender.org/developer/F240815/Screenshot_from_2015-09-29_10_36_39.png)

Added subscriber: @zeauro

Added subscriber: @zeauro

I also see same artifacts with an nvidia titan black nvidia driver 355.11.

I confirm that it appears if same UVmap is precised twice.
No problem if UVmap name is set once into Geometry node for AO Texture or into Mapping panel of Texture Tab for normalmap and the other fieldname is blank.
All is black if both fieldnames are blank.

If a second UVmap , copy of first is made and a different UVmap is precise for AO texture and normalmap.
Display is correct.

I also see same artifacts with an nvidia titan black nvidia driver 355.11. I confirm that it appears if same UVmap is precised twice. No problem if UVmap name is set once into Geometry node for AO Texture or into Mapping panel of Texture Tab for normalmap and the other fieldname is blank. All is black if both fieldnames are blank. If a second UVmap , copy of first is made and a different UVmap is precise for AO texture and normalmap. Display is correct.

Added subscribers: @Psy-Fi, @ideasman42

Added subscribers: @Psy-Fi, @ideasman42

Hum, nothing on my side, but yeah, those are ugly artifacts!

@Psy-Fi, @ideasman42, another looptri one :|

Hum, nothing on my side, but yeah, those are ugly artifacts! @Psy-Fi, @ideasman42, another looptri one :|

Added subscriber: @yurikovelenov

Added subscriber: @yurikovelenov

This issue was referenced by 8e08c50646

This issue was referenced by 8e08c5064622519460aaf697a25171f4a90cfe99

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Fixed, there was a copy-pasted line of code that shouldn't have been there, accessing uninitialized memory.

Fixed, there was a copy-pasted line of code that shouldn't have been there, accessing uninitialized memory.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46305
No description provided.