Fix T46305: normal map display issues in viewport when using VBOs.